--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@9wick/node-web-serial-ponyfill",
-  "version": "0.5.3",
+  "version": "0.5.3-beta.0",
   "description": "An implementation of the Serial API on top of the Node.js serialport package.",
   "main": "dist/node-web-serial-ponyfill.cjs.js",
   "typings": "index.d.ts",
